<resources>
    <string name="app_name">Tarea6</string>
    <string name="Opcion1">Opcion1</string>
    <string name="Opcion2">Opcion2</string>
    <string name="Opcion3">Opcion3</string>
    <string name="Opcion4">Opcion4</string>
    <string name="text1">text2</string>
    <string name="guardar" />
    <string name="Guardar">Guardar</string>
    <string name="Recuaperar">Recuaperar</string>
    <string name="Nombre">Nombre</string>
    <string name="informacion">informacion</string>
    <string name="imagen" />
    <string name="A">*Sí, mucho</string>
    <string name="B">*Más bien sí</string>
    <string name="C">*No sé.</string>
    <string name="D">*No, en absoluto</string>
    <string name="radiobutton">RadioButton</string>
    <string name="Cuatro">¿Es útil el uso de nuestros servicios/productos para usted?</string>
    <string name="Cinco">¿Cómo le parece el aspecto profesional de nuestra compañía?</string>
    <string name="hint">Nombre completo</string>
    <string name="vacio" />
    <string name="mail">eMail</string>
    <string name="telefono">Telefono</string>
    <string name="seis">¿Cuál es la calidad de nuestros servicios en la comparación con las compañías de competencia? (edit text)</string>
    <string name="r">Respuesta</string>
    <string name="siete">¿Le parecen los precios de los productos y servicios más aceptables que los de las compañías de competencia? (check boxes)</string>
    <string name="ocho">¿De qué calidad era nuestro servicio a los clientes?</string>
    <string name="nueve">¿Estaba contento/a con nuestros empleados?</string>
    <string name="diez">¿Cuál es su evaluación total de nuestra compañía?</string>
    <string name="once">¿Recomendaría nuestra compañía a los demás?</string>
    <string name="doce">Tus comentarios son muy valiosos</string>
    <string name="a">*Mucho más aceptables</string>
    <string name="b">*Me agrada las facilidades de pago</string>
    <string name="c">*Igual de aceptables</string>
    <string name="d">*Aceptables</string>
    <string name="e">Nada aceptables</string>
    <string name="t1">Bueno</string>
    <string name="t2">Malo</string>
    <string name="aa">*Mucho más aceptables</string>
    <string name="bb">*Me agrada las facilidades de pago</string>
    <string name="cc">*Igual de aceptables</string>
    <string name="dd">d.*Aceptables</string>
    <string name="ee">*Nada aceptables</string>
    <string name="aaa">5 estrellas Excelente</string>
    <string name="bbb">4 estrellas Bueno</string>
    <string name="ccc">3 estrellas Medianamente bueno,</string>
    <string name="ddd">2 estrellas Tiene que mejorar</string>
    <string name="eee">1 estrella Malo</string>
    <string name="t3">No</string>
    <string name="t4">Si</string>
    <string name="thanks">thanks</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="Phone">phone</string>
    <string name="Name1">name</string>
    <string name="name">Name</string>
    <string name="Email">email</string>

</resources>
