<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="10dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="textPersonName"
                android:text="@string/vacio" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cuatro" />

            <RadioGroup
                android:id="@+id/RadioGrupo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/B"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/C" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/D"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cinco" />

            <RadioGroup
                android:id="@+id/RadioGrupo2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A"
                    android:onClick="onRadioButtonClicked2"/>

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/B"
                    android:onClick="onRadioButtonClicked2"/>

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/C" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/D"
                    android:onClick="onRadioButtonClicked2"/>
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seis" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/r"
                android:inputType="textPersonName"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siete" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/d" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/e"
                android:onClick="onCheckboxClicked2"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocho" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t1"
                android:textOff="@string/t2"
                android:textOn="@string/t1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nueve" />

            <CheckBox
                android:id="@+id/checkBox6"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aa"
                android:onClick="onCheckboxClicked3"/>

            <CheckBox
                android:id="@+id/checkBox19"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bb" />

            <CheckBox
                android:id="@+id/checkBox18"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cc" />

            <CheckBox
                android:id="@+id/checkBox17"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dd" />

            <CheckBox
                android:id="@+id/checkBox16"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ee"
                android:onClick="onCheckboxClicked4"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diez" />

            <CheckBox
                android:id="@+id/checkBox20"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aaa"
                android:onClick="onCheckboxClicked5"/>

            <CheckBox
                android:id="@+id/checkBox24"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bbb" />

            <CheckBox
                android:id="@+id/checkBox23"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ccc" />

            <CheckBox
                android:id="@+id/checkBox22"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ddd" />

            <CheckBox
                android:id="@+id/checkBox21"
                style="?android:attr/starStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eee"
                android:onClick="onCheckboxClicked6"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/once" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/vacio"
                android:textOff="@string/t3"
                android:textOn="@string/t4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doce" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/r"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Guardar"
                android:text="GUARDAR" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Recuaperar"
                android:text="RECUPERAR" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>