<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_opcion1"
        android:enabled="true"
        android:icon="@drawable/imgenav"
        android:title="@string/Opcion1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_opcion2"
        android:enabled="true"
        android:icon="@drawable/imgenav"
        android:title="@string/Opcion2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_opcion3"
        android:enabled="true"
        android:icon="@drawable/imgenav"
        android:title="@string/Opcion3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_opcion4"
        android:enabled="true"
        android:icon="@drawable/imgenav"
        android:title="@string/Opcion4"
        app:showAsAction="ifRoom" />
</menu>

