<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Opcion3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:contentDescription="@string/text1"
        android:text="Escribe la marca del auto que mas te guste"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView3"
        android:layout_width="match_parent"
        android:hint="Marca"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Nombre"
        android:hint="Nombre"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/informacion"
        android:hint="Contraseña"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Guardar"
        android:text="GUARDAR" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Recuaperar"
        android:text="RECUPERAR" />

</LinearLayout>